# thesis-3d-web-renderer

./: .gitignore  README.md  vercel.json
demo/: netlify.toml  next.config.mjs  package-lock.json  package.json  tsconfig.json
demo/src/components/: WasmCanvas.js
demo/src/components/TextInput/: TextInput.js
demo/src/components/WasmCanvas/: WasmCanvas.js
demo/src/pages/: index.js
demo/src/pages/component/: WasmCanvas.js
engine/: .gitignore  Cargo.toml  build.rs
engine/src/: camera.rs  lib.rs  main.rs  model.rs  pipeline.rs  resources.rs  state.rs  texture.rs  utils.rs  window.rs
engine/src/shaders/: texture.wgsl
