[package]
name = "engine"
version = "0.0.3"

# Rust Version
edition = "2021"

[dependencies]
cfg-if = "1"
winit = "0.28.7"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
gltf = {version = "1.3.0", features = []}
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
instant = "0.1"
url = "2.4.1"
reqwest = { version = "0.11", features = ["json", "blocking"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",    
    "Location",
]}

[lib]
crate-type = ["cdylib", "rlib"]